--- a/src/components/auth/register.css
+++ b/src/components/auth/register.css
@@ -26,8 +26,8 @@
   align-self: center;
   color: #545151;
   font-size: 30px;
+  margin-right: 50%;
 
-  margin: 0px 70px 0px 10pxpx;
 }
 .registration-link-home {
   margin-right: 30px;
