--- a/src/components/mainUserPage/main.css
+++ b/src/components/mainUserPage/main.css
@@ -29,6 +29,9 @@
   cursor: pointer;
 
 }
+.app-title-main:hover{
+  cursor:auto;
+}
 
 .write-link {
   background-color: rgba(255, 255, 255, 0);
@@ -45,7 +48,7 @@ margin-right: 20px;
 width:50px;
 height: 50px;
 }
-.profile-img:hover{
+.profile-img-nav:hover{
   cursor: pointer;
 }
 
@@ -72,6 +75,6 @@ height: 50px;
   margin-top: 30px;
   margin-left: 30px;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 1fr;
   row-gap: 30px;
 }
