creating hamburger menu

--- a/src/components/authdetails.css
+++ b/src/components/authdetails.css
@@ -2,7 +2,8 @@
   border: none;
   background-color: rgba(255, 255, 255, 0);
   color: #545151;
-  font-size: 20px;
+  font-size: 1rem;
+  padding:0px
   
 
 }
